V3.4 Fix tick and text spacing

--- a/assets/css/custom-businessevent.css
+++ b/assets/css/custom-businessevent.css
@@ -2,7 +2,8 @@
   display: none;
 }
 
-.custom-button {}
+.custom-button {
+}
 
 .custom-general-button {
   --bs-btn-padding-x: 1.5rem;
@@ -37,7 +38,7 @@
   border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
   border-radius: var(--bs-btn-border-radius);
   background-color: var(--bs-btn-bg);
-  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .custom-button-secondary {
@@ -109,5 +110,6 @@
 }
 
 .custom-justify {
-  text-align: justify !important;
+  text-align: justify;
 }
+
